# ithaca

./: .bazelignore  .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  NODE-ANALYSIS.md  NOTICE.txt  WORKSPACE  maven_install.json
.gemini/: settings.json
.gemini/agents/: node-compat-expert.md  rhino-runtime-expert.md
bazel/: BUILD.bazel  babel.config.json  babel_repo.bzl  babel_rules.bzl  babel_wrapper.js  compile.py  file_list.bzl  java_test_suite.bzl  junit5_test.bzl  package-lock.json  package.json  pnpm-lock.yaml
nodejs/: _http_agent.js  _http_client.js  _http_common.js  _http_incoming.js  _http_outgoing.js  _http_server.js  _tls_common.js  _tls_wrap.js  assert.js  async_hooks.js  buffer.js  child_process.js  cluster.js  console.js  constants.js  crypto.js  dgram.js  diagnostics_channel.js  dns.js  domain.js  dtls.js  events.js  ffi.js  fs.js  http.js  http2.js  https.js  inspector.js  module.js  net.js  os.js  path.js  perf_hooks.js  process.js  punycode.js  querystring.js  quic.js  readline.js  repl.js  sea.js  (+17 more)
nodejs-local/: README.md
nodejs-local/internal/: errors.js
nodejs-local/internal/per_context/: primordials.js
nodejs/assert/: strict.js
nodejs/dns/: promises.js
nodejs/fs/: promises.js
nodejs/inspector/: promises.js
nodejs/internal/: abort_controller.js  assert.js  async_context_frame.js  async_hooks.js  blob.js  blocklist.js  buffer.js  child_process.js  cli_table.js  constants.js  data_url.js  dgram.js  encoding.js  error_serdes.js  errors.js  event_target.js  ffi-shared-buffer.js  file.js  fixed_queue.js  freelist.js  freeze_intrinsics.js  heap_utils.js  histogram.js  http.js  inspector_async_hook.js  inspector_network_tracking.js  js_stream_socket.js  linkedlist.js  locks.js  mime.js  navigator.js  net.js  options.js  priority_queue.js  promise_hooks.js  querystring.js  repl.js  socket_list.js  socketaddress.js  stream_base_commons.js  (+13 more)
nodejs/internal/assert/: assertion_error.js  myers_diff.js  utils.js
nodejs/internal/async_local_storage/: async_context_frame.js  async_hooks.js  run_scope.js
nodejs/internal/bootstrap/: node.js  realm.js  shadow_realm.js
nodejs/internal/child_process/: serialization.js
nodejs/internal/cluster/: child.js  primary.js  round_robin_handle.js  shared_handle.js  utils.js  worker.js
nodejs/internal/console/: constructor.js  global.js
nodejs/internal/crypto/: aes.js  argon2.js  certificate.js  cfrg.js  chacha20_poly1305.js  cipher.js  diffiehellman.js  ec.js  hash.js  hashnames.js  hkdf.js  kem.js  keygen.js  keys.js  mac.js  ml_dsa.js  ml_kem.js  pbkdf2.js  random.js  rsa.js  scrypt.js  sig.js  util.js  webcrypto.js  webcrypto_util.js  webidl.js  x509.js
nodejs/internal/debugger/: inspect.js  inspect_client.js  inspect_helpers.js  inspect_probe.js  inspect_repl.js
nodejs/internal/dns/: callback_resolver.js  promises.js  utils.js
nodejs/internal/encoding/: single-byte.js  util.js
nodejs/internal/errors/: error_source.js
nodejs/internal/events/: abort_listener.js  symbols.js
nodejs/internal/fs/: dir.js  glob.js  promises.js  recursive_watch.js  rimraf.js  streams.js  sync_write_stream.js  utils.js  watchers.js
nodejs/internal/http2/: compat.js  core.js  util.js
nodejs/internal/inspector/: network.js  network_http.js  network_http2.js  network_resources.js  network_undici.js  webstorage.js
nodejs/internal/legacy/: processbinding.js
nodejs/internal/main/: check_syntax.js  eval_stdin.js  eval_string.js  inspect.js  print_help.js  prof_process.js  repl.js  run_main_module.js  test_runner.js  watch_mode.js  worker_thread.js
nodejs/internal/modules/: customization_hooks.js  helpers.js  package_json_reader.js  run_main.js  typescript.js
nodejs/internal/per_context/: domexception.js  messageport.js  primordials.js
nodejs/internal/perf/: event_loop_delay.js  event_loop_utilization.js  nodetiming.js  observe.js  performance.js  performance_entry.js  resource_timing.js  timerify.js  usertiming.js  utils.js
nodejs/internal/process/: execution.js  finalization.js  per_thread.js  permission.js  pre_execution.js  promises.js  report.js  signal.js  task_queues.js  warning.js  worker_thread_only.js
nodejs/internal/quic/: diagnostics.js
nodejs/internal/readline/: callbacks.js  emitKeypressEvents.js  interface.js  promises.js  utils.js
nodejs/internal/repl/: await.js  completion.js  history.js  utils.js
nodejs/internal/source_map/: prepare_stack_trace.js  source_map.js  source_map_cache.js  source_map_cache_map.js
nodejs/internal/streams/: add-abort-signal.js  compose.js  destroy.js  duplex.js  duplexify.js  duplexpair.js  end-of-stream.js  fast-utf8-stream.js  from.js  lazy_transform.js  legacy.js  operators.js  passthrough.js  pipeline.js  readable.js  state.js  transform.js  utils.js  writable.js
nodejs/internal/test/: binding.js  transfer.js
nodejs/internal/test_runner/: assert.js  coverage.js  harness.js  runner.js  snapshot.js  tag_filter.js  test.js  tests_stream.js  utils.js
nodejs/internal/tls/: common.js  secure-context.js  wrap.js
nodejs/internal/util/: colors.js  comparisons.js  debuglog.js  diff.js  inspect.js  inspector.js  trace_sigint.js  types.js
nodejs/internal/v8/: cpu_profiler.js  heap_profile.js  startup_snapshot.js
nodejs/internal/vfs/: dir.js  errors.js  fd.js  file_handle.js  file_system.js  provider.js  router.js  setup.js  stats.js  streams.js  watcher.js
nodejs/internal/vm/: module.js
nodejs/internal/watch_mode/: files_watcher.js
nodejs/internal/webstreams/: adapters.js  compression.js  encoding.js  queuingstrategies.js  readablestream.js  transfer.js  transformstream.js  util.js  writablestream.js
nodejs/path/: posix.js  win32.js
nodejs/readline/: promises.js
nodejs/stream/: consumers.js  iter.js  promises.js  web.js
nodejs/test/: reporters.js
nodejs/timers/: promises.js
nodejs/util/: types.js
nodejs/zlib/: iter.js
tests/: buffer.js  fs.js  smoke.js  string_decoder.js  timer.js  timer2.js
tools/: Makefile  babel.config.json  checkformat.sh  convert.sh  fixformat.sh  package-lock.json  package.json
(+168 files in other folders)
