load("@contrib_rules_jvm//java:defs.bzl", "JUNIT5_DEPS")
load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")
load("//:bazel/file_list.bzl", "file_list")
load("//:bazel/junit5_test.bzl", "junit5_test")

java_binary(
    name = "googlejavaformat",
    srcs = [],
    jvm_flags = [
        # Required by google-java-format on JDK 16+
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",

        # Opens for reflective access
        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
    ],
    main_class = "com.google.googlejavaformat.java.Main",
    runtime_deps = ["@maven//:com_google_googlejavaformat_google_java_format"],
)

java_library(
    name = "ithaca",
    srcs = glob(
        ["src/main/java/**"],
        exclude = ["src/main/java/org/brail/ithaca/Main.java"],
    ),
    resources = [
        ":internal_modules",
    ] + glob([
        "nodejs/**",
        "src/main/resources/**",
    ]),
    deps = [
        "@maven//:com_github_teaconmc_urlpattern",
        "@maven//:org_slf4j_slf4j_api",
        "@rhino//rhino",
    ],
)

java_binary(
    name = "ithaca-cli",
    srcs = ["src/main/java/org/brail/ithaca/Main.java"],
    jvm_flags = [
        "-Dorg.slf4j.simpleLogger.defaultLogLevel=debug",
    ],
    main_class = "org.brail.ithaca.Main",
    deps = [
        ":ithaca",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_slf4j_simple",
        "@rhino//rhino",
    ],
)

file_list(
    name = "internal_modules",
    srcs = glob(["nodejs/**"]),
    strip_prefix = "nodejs",
    strip_suffix = ".js",
)

junit5_test(
    name = "ConfigTest",
    srcs = ["src/test/java/org/brail/ithaca/internal/bindings/test/ConfigTest.java"],
    deps = [
        ":ithaca",
        "@maven//:org_junit_jupiter_junit_jupiter",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@rhino//rhino",
    ] + JUNIT5_DEPS,
)

junit5_test(
    name = "ProcessTest",
    srcs = ["src/test/java/org/brail/ithaca/internal/bindings/test/ProcessTest.java"],
    deps = [
        ":ithaca",
        "@maven//:org_junit_jupiter_junit_jupiter",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@rhino//rhino",
    ] + JUNIT5_DEPS,
)

junit5_test(
    name = "JsUrlTest",
    srcs = ["src/test/java/org/brail/ithaca/internal/bindings/test/JsUrlTest.java"],
    deps = [
        ":ithaca",
        "@maven//:org_junit_jupiter_junit_jupiter",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@rhino//rhino",
    ] + JUNIT5_DEPS,
)

junit5_test(
    name = "UtilTest",
    srcs = ["src/test/java/org/brail/ithaca/internal/bindings/test/UtilTest.java"],
    deps = [
        ":ithaca",
        "@maven//:org_junit_jupiter_junit_jupiter",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@rhino//rhino",
    ] + JUNIT5_DEPS,
)
