load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")
load("//bazel:babel_rules.bzl", "babel_preprocess")
load("//bazel:file_list.bzl", "file_list")
load("//bazel:java_test_suite.bzl", "java_test_suite")
load("//bazel:junit5_test.bzl", "junit5_test")

babel_preprocess(
    name = "preprocessed_node_lib",
    srcs = glob(
        ["node/lib/**/*.js"],
        # Locally-modified files
        exclude = [
            "node/lib/internal/errors.js",
            "node/lib/internal/per_context/primordials.js",
            "node/lib/internal/test_runner/reporter/tap.js",
        ],
    ) + glob(["nodejs-local/**/*.js"]) + ["node/deps/minimatch/index.js"],
)

java_library(
    name = "ithaca",
    srcs = glob(
        ["src/main/java/**"],
        exclude = ["src/main/java/org/brail/ithaca/Main.java"],
    ),
    resources =
        [
            ":internal_modules",
            ":preprocessed_node_lib",
        ] + glob([
            "src/main/resources/**",
        ]),
    deps = [
        "@maven//:com_github_teaconmc_urlpattern",
        "@maven//:org_slf4j_slf4j_api",
        "@rhino//rhino",
    ],
)

java_binary(
    name = "ithaca-cli",
    srcs = ["src/main/java/org/brail/ithaca/Main.java"],
    main_class = "org.brail.ithaca.Main",
    runtime_deps = ["@maven//:org_slf4j_slf4j_simple"],
    deps = [
        ":ithaca",
        "@maven//:org_slf4j_slf4j_api",
        "@rhino//rhino",
    ],
)

# Make a file containing a list of preprocessed filenames.
# We need this because Node likes to get a big array of the names
# of the internal modules.
file_list(
    name = "internal_modules",
    srcs = [
        ":preprocessed_node_lib",
    ],
    strip_prefix = "nodejs",
    strip_suffix = ".js",
)

# Run a whole bunch of tests!
java_library(
    name = "junit5_runner",
    srcs = ["src/test/java/org/brail/ithaca/JUnit5Runner.java"],
    deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
    ],
)

java_test_suite(
    name = "UnitTests",
    size = "small",
    srcs = glob(
        ["src/test/java/**/*.java"],
        exclude = ["src/test/java/org/brail/ithaca/JUnit5Runner.java"],
    ),
    runtime_deps = ["@maven//:org_slf4j_slf4j_simple"],
    deps = [
        ":ithaca",
        "@maven//:org_junit_jupiter_junit_jupiter",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@rhino//rhino",
    ],
)

# Convenient way to download and run this tool
java_binary(
    name = "googlejavaformat",
    srcs = [],
    jvm_flags = [
        # Required by google-java-format on JDK 16+
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",

        # Opens for reflective access
        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
    ],
    main_class = "com.google.googlejavaformat.java.Main",
    runtime_deps = ["@maven//:com_google_googlejavaformat_google_java_format"],
)
