module(
    name = "ithaca",
    version = "0.0.1-SNAPSHOT",
)

bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_nodejs", version = "6.3.3")
bazel_dep(name = "rules_jvm_external", version = "7.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rhino", version = "2.0.0-SNAPSHOT")
#local_path_override(
#    module_name = "rhino",
#    path = "../rhino",
#)

git_override(
    module_name = "rhino",
    commit = "672c2e8b57ae9a30e4adcb3efcf447ef693400cf",
    remote = "https://github.com/gbrail/rhino.git",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

# Whenever you change this you must run:
#    REPIN=1 bazel run @maven//:pin
maven.install(
    artifacts = [
        "org.slf4j:slf4j-api:2.0.18",
        "org.slf4j:slf4j-simple:2.0.18",
        "org.junit.jupiter:junit-jupiter:5.10.3",
        "org.junit.jupiter:junit-jupiter-api:5.10.3",
        "org.junit.jupiter:junit-jupiter-engine:5.10.3",
        "org.junit.jupiter:junit-jupiter-params:5.10.3",
        "org.junit.platform:junit-platform-launcher:1.10.3",
        "org.junit.platform:junit-platform-console:1.10.3",
        "org.junit.platform:junit-platform-console-standalone:1.10.3",
        "org.junit.platform:junit-platform-runner:1.10.3",
        "org.junit.platform:junit-platform-reporting:1.10.3",
        "org.hamcrest:hamcrest:3.0",
        "com.github.teaconmc:urlpattern:1.0.1",
        "com.google.googlejavaformat:google-java-format:1.35.0",
    ],
    known_contributing_modules = ["protobuf"],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://jitpack.io",
    ],
)
use_repo(maven, "maven")

babel_deps = use_extension("//bazel:babel_repo.bzl", "babel_deps_extension")
use_repo(babel_deps, "babel_deps")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "20.11.1")
use_repo(node, "nodejs_toolchains")
